--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>☩𝕧𝔢𝔩𝔪.𝔬𝔯𝔞✞⛧</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Gothic + elegant fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
