--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
     <p>Where darkness becomes desire</p>
   </div>
 
-</body>
+</body><section class="collection">
+  <h2>Featured Collection</h2>
+
+  <div class="products">
+
+    <div class="card">
+      <img src="https://via.placeholder.com/300x300" alt="Ring">
+      <h3>Obsidian Ring</h3>
+      <p class="price">₹899</p>
+      <a href="https://wa.me/91XXXXXXXXXX" class="order">Order on WhatsApp</a>
+    </div>
+
+  </div>
+</section>
 </html>
