--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
       <h3>Obsidian Ring</h3>
       <p class="price">₹899</p>
       <a href="https://wa.me/91XXXXXXXXXX" class="order">Order on WhatsApp</a>
-    </div>
+    </div><div class="card">
+  <img src="https://via.placeholder.com/300x300" alt="Necklace">
+  <h3>Midnight Cross</h3>
+  <p class="price">₹1299</p>
+  <a href="https://wa.me/91XXXXXXXXXX" class="order">Order on WhatsApp</a>
+</div>
 
   </div>
 </section>
