--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <img src="https://via.placeholder.com/300x300" alt="Ring">
       <h3>Obsidian Ring</h3>
       <p class="price">₹899</p>
-      <a href="https://wa.me/91XXXXXXXXXX" class="order">Order on WhatsApp</a>
+    <a href="https://wa.me/917907445995?text=Hi%20I%20want%20to%20order%20from%20Velmora" class="order">
+Order on WhatsApp
+</a>
     </div><div class="card">
   <img src="https://via.placeholder.com/300x300" alt="Necklace">
   <h3>Midnight Cross</h3>
