--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@ Order on WhatsApp
   <img src="https://via.placeholder.com/300x300" alt="Necklace">
   <h3>Midnight Cross</h3>
   <p class="price">₹1299</p>
-  <a href="https://wa.me/91XXXXXXXXXX" class="order">Order on WhatsApp</a>
+  <a href="https://wa.me/917907445995?text=Hi%20I%20want%20to%20order%20from%20Velmora" class="order">
+Order on WhatsApp
+</a>
 </div>
 
   </div>
