--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 Order on WhatsApp
 </a>
     </div><div class="card">
-  <img src="https://via.placeholder.com/300x300" alt="Necklace">
-  <h3>Midnight Cross</h3>
-  <p class="price">₹1299</p>
+  <img src="https://via.placeholder.com/300x300" alt="couple ring">
+  <h3>velmora promise</h3>
+  <p class="price">₹159</p>
   <a href="https://wa.me/917907445995?text=Hi%20I%20want%20to%20order%20from%20Velmora" class="order">
 Order on WhatsApp
 </a>
