--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <div class="card">
       <img src="https://via.placeholder.com/300x300" alt="Ring">
-      <h3>Obsidian Ring</h3>
-      <p class="price">₹899</p>
+      <h3>void crozs</h3>
+      <p class="price">₹80</p>
     <a href="https://wa.me/917907445995?text=Hi%20I%20want%20to%20order%20from%20Velmora" class="order">
 Order on WhatsApp
 </a>
