--- a/index.html
+++ b/index.html
@@ -4,40 +4,107 @@
   <meta charset="UTF-8">
   <title>☩𝕧𝔢𝔩𝔪.𝔬𝔯𝔞✞⛧</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Gothic + elegant fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <div class="hero">
-    <h1>☩𝕧𝔢𝔩𝔪.𝔬𝔯𝔞✞⛧</h1>
-    <p>Where darkness becomes desire</p>
-  </div>
+<section class="hero">
+  <h1>☩𝕧𝔢𝔩𝔪.𝔬𝔯𝔞✞⛧</h1>
+  <p>Where darkness becomes desire</p>
+</section>
 
-</body><section class="collection">
+<section class="products">
   <h2>Featured Collection</h2>
 
-  <div class="products">
+  <div class="product-grid">
 
-    <div class="card">
-      <img src="https://via.placeholder.com/300x300" alt="Ring">
-      <h3>void cross</h3>
-      <p class="price">₹80</p>
-    <a href="https://wa.me/917907445995?text=Hi%20I%20want%20to%20order%20from%20Velmora" class="order">
-Order on WhatsApp
-</a>
-    </div><div class="card">
-  <img src="https://via.placeholder.com/300x300" alt="couple ring">
-  <h3>velmora promise</h3>
-  <p class="price">₹159</p>
-  <a href="https://wa.me/917907445995?text=Hi%20I%20want%20to%20order%20from%20Velmora" class="order">
-Order on WhatsApp
-</a>
-</div>
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Pink Star</h3>
+      <p class="price">₹120</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Blue Star</h3>
+      <p class="price">₹120</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Opal Star</h3>
+      <p class="price">₹120</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Crown Ring</h3>
+      <p class="price">₹89</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Pinterest Cross</h3>
+      <p class="price">₹160</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Blood Line Cross</h3>
+      <p class="price">₹180</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Velmora Blood Relic</h3>
+      <p class="price">₹130</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>The Scarlet Oath</h3>
+      <p class="price">₹130</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Filgerland Cross</h3>
+      <p class="price">₹150</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Pearl Heart</h3>
+      <p class="price">₹160</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Red Chrome</h3>
+      <p class="price">₹140</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Red Heart Wing</h3>
+      <p class="price">₹120</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Ribbon Heart</h3>
+      <p class="price">₹159</p>
+    </div>
+
+    <div class="product">
+      <img src="https://via.placeholder.com/300">
+      <h3>Luxury Love</h3>
+      <p class="price">₹149</p>
+    </div>
 
   </div>
 </section>
+
+</body>
 </html>
